log
Wed, Mar 19, 2025  9:10:39 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:11:40 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
c797bd9
Wed, Mar 19, 2025  9:13:14 AM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
083f5a5
Wed, Mar 19, 2025  9:16:40 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2c561a1
Sat, Mar 22, 2025  2:21:44 PM: 
 tests:  1|4
total_score: 10/70
bae6ca4
Sat, Mar 22, 2025  2:47:46 PM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:15: error: dereferencing 'void *' pointer [-Werror]
       suma += *elemento;
               ^~~~~~~~~
exercises.c:66:15: error: void value not ignored as it ought to be
exercises.c:67:13: error: unused variable 'elemento' [-Werror=unused-variable]
       void* elemento = next(L);
             ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b775444
Sat, Mar 22, 2025  2:51:51 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:13: error: unused variable 'elemento' [-Werror=unused-variable]
       void* elemento = next(L);
             ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7856111
Sat, Mar 22, 2025  2:53:56 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:12: error: unused variable 'elemento' [-Werror=unused-variable]
       int *elemento = (int *) next(L);
            ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ac459a1
Sat, Mar 22, 2025  5:23:02 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:67:12: error: redefinition of 'elemento'
       int *elemento = (int *) next(L);
            ^~~~~~~~
exercises.c:65:12: note: previous definition of 'elemento' was here
       int *elemento = (int *) first(L);
            ^~~~~~~~
exercises.c:67:12: error: unused variable 'elemento' [-Werror=unused-variable]
       int *elemento = (int *) next(L);
            ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c426e82
Sat, Mar 22, 2025  5:23:38 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:9: error: redefinition of 'elemento'
    int *elemento = (int *) next(L);
         ^~~~~~~~
exercises.c:63:9: note: previous definition of 'elemento' was here
    int *elemento = (int *) first(L);
         ^~~~~~~~
exercises.c:68:9: error: unused variable 'elemento' [-Werror=unused-variable]
    int *elemento = (int *) next(L);
         ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d85cc83
Sat, Mar 22, 2025  5:50:27 PM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:12: error: unused variable 'elemento' [-Werror=unused-variable]
       int *elemento = (int *) next(L);
            ^~~~~~~~
exercises.c:62:8: error: unused variable 'total' [-Werror=unused-variable]
    int total = get_size(L);
        ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1ad65d9
Sat, Mar 22, 2025  5:50:55 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:12: error: unused variable 'elemento' [-Werror=unused-variable]
       int *elemento = (int *) next(L);
            ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6c65540
Sat, Mar 22, 2025  5:53:13 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elemento = (int *) next(L);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ffb3f7e
Sat, Mar 22, 2025  5:53:34 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elemento = next(L);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5f9c3a7
Sat, Mar 22, 2025  5:54:17 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
8c6cb7b
Sat, Mar 22, 2025  6:12:10 PM: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:85:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
       if (i = elem) popCurrent(L);
       ^~
cc1.exe: all warnings being treated as errors
Compilation failed
4a01b3e
Sat, Mar 22, 2025  6:14:14 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
7d04ba8
Sat, Mar 22, 2025  6:24:07 PM: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:83:20: error: comparison between pointer and integer [-Werror]
    while (elemento == elem)
                    ^~
cc1.exe: all warnings being treated as errors
Compilation failed
8a5bf65
